mobile sidebar layout

--- a/index.html
+++ b/index.html
@@ -50,19 +50,36 @@
               </a>
             </div>
             <ul class="links">
-              <li><a href="#skills" title="skills" data-after="skills" class="scroll-link scroll-li"><i
-                    class="fas fa-lightbulb"></i>skills</a></li>
-              <li><a href="#projects" title="projects" data-after="Projects" class="scroll-link scroll-li"><i
-                    class="fab fa-github"></i>projects</a></li>
-              <li><a href="#about" title="about" data-after="About" class="scroll-link scroll-li"><i
-                    class="fas fa-user-circle"></i>about</a></li>
-              <li><a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li"><i
-                    class="fas fa-at"></i>contact</a></li>
-              <li><a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li"><i
-                    class="fas fa-user-friends"></i>socials</a></li>
-              <li><a href="forms/form.html" title="contact-form" target="_blank" data-after="forms" class="scroll-li"><i
-                    class="fas fa-address-book"></i>get In touch</a></li>
-                    
+              <li>
+                <i class="fas fa-lightbulb"></i>
+                <a href="#skills" title="skills" data-after="skills"class="scroll-link scroll-li">skills</a>
+              </li>
+              
+              <li>
+                <i class="fab fa-github active"></i>
+                <a href="#projects" title="projects" data-after="Projects" class="scroll-link scroll-li">projects</a>
+              </li>
+
+              <li>
+                <i class="fas fa-user-circle"></i>
+                <a href="#about" title="about" data-after="About" class="scroll-link scroll-li">about</a>
+                </li>
+
+              <li>
+                <i class="fas fa-at"></i>
+                <a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li">contact</a>
+              </li>
+
+              <li>
+                <i class="fas fa-user-friends"></i>
+                <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
+              </li>
+
+              <li>
+                <i class="fas fa-address-book"></i>
+                <a href="forms/form.html" title="contact-form" target="_blank" data-after="forms" class="scroll-li">get In touch</a>
+              </li>
+
             </ul>
           </div>
         </div>
