--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </section>
   <!-- End of Hero Section-->
 <!-- padding section -->
-<section class="paralax paralax-logo"></section>
+<!-- <section class="paralax paralax-logo"></section> -->
 <!-- end of padding section -->
 
   <!--Skills section-->
@@ -324,7 +324,7 @@
   <!--End of Skills section-->
 
   <!-- padding section -->
-  <section class="paralax px1"></section>
+  <section class="paralax paralax-logo"></section>
   <!-- end of padding section -->
   <!--Projects Section-->
   <section id="projects">
@@ -445,7 +445,7 @@
   <!--End of Contact Section-->
 
   <!-- padding section -->
-  <section class="paralax paralax-logo"></section>
+  <!-- <section class="paralax paralax-logo"></section> -->
   <!-- end of padding section -->
 
   <!--Footer-->
