--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </section>
   <!-- End of Hero Section-->
 <!-- padding section -->
-<!-- <section class="paralax paralax-logo"></section> -->
+<section class="paralax paralax-logo"></section>
 <!-- end of padding section -->
 
   <!--Skills section-->
@@ -324,7 +324,7 @@
   <!--End of Skills section-->
 
   <!-- padding section -->
-  <section class="paralax paralax-logo"></section>
+  <section class="paralax px1"></section>
   <!-- end of padding section -->
   <!--Projects Section-->
   <section id="projects">
@@ -445,42 +445,13 @@
   <!--End of Contact Section-->
 
   <!-- padding section -->
-  <!-- <section class="paralax paralax-logo"></section> -->
+  <section class="paralax paralax-logo"></section>
   <!-- end of padding section -->
 
   <!--Footer-->
   <footer id="footer">
     <div class="footer container">
-      <!-- contact form -->
-      <form data-scroll class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-        <h1 class="footer-section-title contact">Get In Touch</h1>
-
-        <div class="input-div">
-          <label for="name">name :</label>
-          <input type="text" name="username" id="username" placeholder="name & surname.." required minlength="2">
-        </div>
-
-        <div class="input-div">
-          <label for="email">email :</label>
-          <input type="email" name="email" id="email" placeholder="your email address.." required>
-        </div>
-
-        <div class="input-div">
-          <label for="message">message :</label>
-          <textarea rows="3" cols="50" name="message" placeholder="leave a message..." id="message" required></textarea>
-        </div>
-
-        <button type="submit" title="submit contact form">send email</button>
-        <!-- form options -->
-        <input type="hidden" name="_subject" value="New submission!">
-        <input type="hidden" name="_autoresponse" value="Shakex has received your form">
-        <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/thanks.html">
-        <input type="hidden" name="_template" value="table">
-        <input type="text" name="_honey" style="display:none">
-
-      </form>
-      <!-- end of contact form -->
-
+      
       <!-- social media links -->
       <section data-scroll class="socialMedia-links">
         <h1 class="footer-section-title">my links</h1>
@@ -540,7 +511,35 @@
 
       </section>
       <!-- end of social media links -->
+<!-- contact form -->
+<form data-scroll class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
+  <h1 class="footer-section-title contact">Get In Touch</h1>
 
+  <div class="input-div">
+    <label for="name">name :</label>
+    <input type="text" name="username" id="username" placeholder="name & surname.." required minlength="2">
+  </div>
+
+  <div class="input-div">
+    <label for="email">email :</label>
+    <input type="email" name="email" id="email" placeholder="your email address.." required>
+  </div>
+
+  <div class="input-div">
+    <label for="message">message :</label>
+    <textarea rows="3" cols="50" name="message" placeholder="leave a message..." id="message" required></textarea>
+  </div>
+
+  <button type="submit" title="submit contact form">send email</button>
+  <!-- form options -->
+  <input type="hidden" name="_subject" value="New submission!">
+  <input type="hidden" name="_autoresponse" value="Shakex has received your form">
+  <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/thanks.html">
+  <input type="hidden" name="_template" value="table">
+  <input type="text" name="_honey" style="display:none">
+
+</form>
+<!-- end of contact form -->
 
 
 
