about article and skills-top

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div data-scroll class="skills-top">
         <p>
           I'm a Front End Developer with a keen interest Responsive Web Design and UX design.<br>
-          I code Landing Pages and Portfolio Webpages for small businesses and individuals 
+          I code immersive Landing Pages and Portfolio Webpages for small businesses and individuals 
           <br><br><span>View my full skill set in the dropdown section below.</span>
         </p>
       </div>
@@ -353,7 +353,7 @@
           <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
         <article class="about-article">
-          <p id="intro">Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria
+          <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate from University of Pretoria
             having gained
             his A-levels from the
             International School of South Africa.</p>
@@ -378,8 +378,8 @@
         <button id="readBtn" title="read more">read more</button>
 
         <article id="cv">
-          <a href="https://codepen.io/bSempe" title='Code-pen' target="_blank" class="fcc-link">
-            <i class="fab fa-codepen" aria-hidden="true"></i>CodePen
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' target="_blank" class="fcc-link">
+            <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
           </a>
           <a href="./cv/b-sempe-cv-2021.pdf" title="download cv" target="_blank" class="fcc-link">
             <i class="fas fa-user-graduate"></i>cv
