--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       </div>
       <div data-scroll class="skills-top">
         <p>
-          I'm a Front End Developer with a keen interest Responsive Web Design and UX design.<br>
-          I code immersive Landing Pages and Portfolio Webpages for small businesses and individuals 
+          I'm a Front End Developer focused on Responsive Web Design and UX Design.<br>
+          I code immersive Landing Pages and Portfolio Webpages for small businesses and individuals.
           <br><br><span>View my full skill set in the dropdown section below.</span>
         </p>
       </div>
