about-article body

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
               <li>
                 <i class="fas fa-address-book"></i>
-                <a href="forms/form.html" title="contact-form" target="_blank" data-after="forms" class="scroll-li">get In touch</a>
+                <a href="forms/form.html" title="contact-form" target="_blank" data-after="form" class="scroll-li">get In touch</a>
               </li>
 
             </ul>
@@ -353,26 +353,26 @@
           <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
         <article class="about-article">
-          <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate from University of Pretoria
+          <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate
+            from University of Pretoria
             having gained
             his A-levels from the
             International School of South Africa.</p>
 
-          <p class="about-body" id="about-body">Boitumelo is looking first job in the industry where he can gain the
-            necessary professional
-            competencies to make an effective web developer that can add value to web based products
-            and services.
+          <p class="about-body">I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
+            and in 2019 enrolled in the online coding bootcamp
+            <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
+            where I completed a certificate in Responsive Web Design.
           </p>
 
-          <p class="about-body">A former Customer Care agent at the Compensation Fund (Department of Labour), he started
-            coding in 2019
-            and enrolled in the online coding bootcamp
-            <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
-            where he completed a certificate in Responsive Web Design.
+          <p class="about-body" id="about-body">I enjoy making responsive web pages which look good on devices ranging
+            from small mobile screens to large desktop screens.
+            I use HTML Semantic Markup and On-Page Search Engine Optimization techniques to grow website views,
+            essential for online presence and web traffic to the site by potential customers and clients.
           </p>
-          <p class="about-body">Boitumelo is currently studying towards MERN stack competency and committed to learning
-            other development
-            stacks such as Python and PHP back end scripting.
+
+
+          <p class="about-body">I am currently learning the MERN stack which I aim to build full stack web products.
           </p>
         </article>
         <button id="readBtn" title="read more">read more</button>
