--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
       <div id="bs21">
         <p>copyright&copy; Boitumelo Sempe.</p>
-        <p>shakex sempe</p>
+        <p><span>shakex sempe</span> </p>
         <span id="date"></span>
       </div>
     </div>
