form input states

--- a/forms/form.html
+++ b/forms/form.html
@@ -100,7 +100,7 @@
                             <div class="label">
                                 name*
                             </div>
-                            <input tabindex="1" type="text" min="2" name="Name" placeholder="name & surname" required>
+                            <input tabindex="1" type="text" minlength="2" name="Name" placeholder="name & surname" required>
                         </div>
                         <div class="field">
                             <div class="label">
