--- a/index.html
+++ b/index.html
@@ -120,9 +120,16 @@
     </div>
   </section>
   <!-- End of Hero Section-->
-<!-- padding section -->
-<section class="paralax paralax-logo"></section>
-<!-- end of padding section -->
+  <!-- padding section -->
+  <section class="skills-pad">
+    <figure data-scroll>
+      <a href="#skills">
+        <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
+      </a>
+    </figure>
+  </section>
+  <!-- end of padding section -->
+
 
   <!--Skills section-->
   <section id="skills">
@@ -322,10 +329,10 @@
     </div>
   </section>
   <!--End of Skills section-->
-
-  <!-- padding section -->
-  <section class="paralax px1"></section>
-  <!-- end of padding section -->
+<!-- padding section -->
+<section class="paralax paralax-logo"></section>
+<!-- end of padding section -->
+  
   <!--Projects Section-->
   <section id="projects">
     <div class="projects container">
