test: removed parallax scrolling

--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
     </div>
   </section>
   <!-- End of Hero Section-->
+
   <!-- padding section -->
-  <section class="skills-pad">
+  <section class="section-pad pad-logo">
     <figure data-scroll>
       <a href="#skills">
-        <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
+        <img src="img/shakex-logo-min.png" loading="lazy" alt="screens">
       </a>
     </figure>
   </section>
   <!-- end of padding section -->
-
 
   <!--Skills section-->
   <section id="skills">
@@ -329,8 +329,19 @@
     </div>
   </section>
   <!--End of Skills section-->
+
+  <!-- padding section -->
+  <section class="section-pad pad2">
+    <figure data-scroll>
+      <a href="#projects">
+        <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
+      </a>
+    </figure>
+  </section>
+  <!-- end of padding section -->
+
 <!-- padding section -->
-<section class="paralax paralax-logo"></section>
+<!-- <section class="paralax paralax-logo"></section> -->
 <!-- end of padding section -->
   
   <!--Projects Section-->
@@ -344,7 +355,13 @@
   <!--End of Projects Section-->
 
   <!-- padding section -->
-  <section class="paralax px2"></section>
+  <section class="section-pad pad-me">
+    <figure data-scroll>
+      <a href="#about">
+        <img src="img/me-min.jpg" loading="lazy" alt="screens">
+      </a>
+    </figure>
+  </section>
   <!-- end of padding section -->
 
   <!--About Section-->
@@ -400,7 +417,13 @@
   <!--End of About Section-->
 
   <!-- padding section -->
-  <section class="paralax px3"></section>
+  <section class="section-pad pad2">
+    <figure data-scroll>
+      <a href="#skills">
+        <img src="img/shakex-logo-min.png" loading="lazy" alt="screens">
+      </a>
+    </figure>
+  </section>
   <!-- end of padding section -->
 
   <!--Contact Section-->
