new layout without parallax sections

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <button href="#skills" type="button" title="Shakex-about"  id="cta-header" class="scroll-link">
+        <button href="#logo-pad" type="button" title="Shakex-about"  id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -122,7 +122,7 @@
   <!-- End of Hero Section-->
 
   <!-- padding section -->
-  <section class="section-pad pad-logo">
+  <section id="logo-pad" class="section-pad pad-logo">
     <figure data-scroll>
       <a href="#skills">
         <img src="img/shakex-logo-min.png" loading="lazy" alt="screens">
@@ -417,9 +417,9 @@
   <!--End of About Section-->
 
   <!-- padding section -->
-  <section class="section-pad pad2">
+  <section class="section-pad pad-logo">
     <figure data-scroll>
-      <a href="#skills">
+      <a href="#footer">
         <img src="img/shakex-logo-min.png" loading="lazy" alt="screens">
       </a>
     </figure>
