--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <button href="#logo-pad" type="button" title="Shakex-about"  id="cta-header" class="scroll-link">
+        <button href="#skills" type="button" title="Shakex-about"  id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -121,15 +121,9 @@
   </section>
   <!-- End of Hero Section-->
 
-  <!-- padding section -->
-  <section id="logo-pad" class="section-pad pad-logo">
-    <figure data-scroll>
-      <a href="#skills">
-        <img src="img/shakex-logo-min.png" loading="lazy" alt="screens">
-      </a>
-    </figure>
-  </section>
-  <!-- end of padding section -->
+<!-- padding section -->
+<section class="paralax paralax-logo"></section>
+<!-- end of padding section -->
 
   <!--Skills section-->
   <section id="skills">
@@ -340,9 +334,7 @@
   </section>
   <!-- end of padding section -->
 
-<!-- padding section -->
-<!-- <section class="paralax paralax-logo"></section> -->
-<!-- end of padding section -->
+
   
   <!--Projects Section-->
   <section id="projects">
@@ -416,15 +408,15 @@
   </section>
   <!--End of About Section-->
 
-  <!-- padding section -->
-  <section class="section-pad pad-logo">
-    <figure data-scroll>
-      <a href="#footer">
-        <img src="img/shakex-logo-min.png" loading="lazy" alt="screens">
-      </a>
-    </figure>
-  </section>
-  <!-- end of padding section -->
+ <!-- padding section -->
+ <section class="section-pad pad-me">
+  <figure data-scroll>
+    <a href="#contact">
+      <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
+    </a>
+  </figure>
+</section>
+<!-- end of padding section -->
 
   <!--Contact Section-->
   <section id="contact">
@@ -474,6 +466,9 @@
   </section>
   <!--End of Contact Section-->
 
+ <!-- padding section -->
+ <section class="paralax paralax-logo"></section>
+ <!-- end of padding section -->
 
   <!--Footer-->
   <footer id="footer">
