--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   <!--End of About Section-->
 
  <!-- padding section -->
- <section class="section-pad pad-me">
+ <section class="section-pad pad-me-blue">
   <figure data-scroll>
     <a href="#contact">
       <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
