setup: skills img

--- a/index.html
+++ b/index.html
@@ -320,6 +320,11 @@
           </div>
         </div>
       </div>
+      <!-- <figure data-scroll>
+        <a href="#projects">
+          <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
+        </a>
+      </figure> -->
     </div>
   </section>
   <!--End of Skills section-->
