--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@
 
         <div data-scroll class="contact-item">
           <div class="icon">
-            <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" />
+            <i class="fas fa-map"></i>
+            <!-- <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" /> -->
           </div>
           <h1>Address</h1>
           <div class="contact-info">
@@ -444,7 +445,7 @@
 
         <div data-scroll class="contact-item">
           <div class="icon">
-            <img src="/icons/icons8-email-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/email.png" />
+            <i class="fas fa-envelope"></i>
           </div>
           <h1>Email</h1>
           <div class="contact-info">
@@ -455,7 +456,7 @@
 
         <div data-scroll class="contact-item">
           <div class="icon">
-            <img src="/icons/icons8-phone-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/phone.png" />
+            <i class="fas fa-phone-alt"></i>
           </div>
           <h1>Phone</h1>
           <div id="phone" class="contact-info">
