--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   <!--End of Skills section-->
 
   <!-- padding section -->
-  <section class="section-pad pad2">
+  <section class="section-pad pad-intro">
     <figure data-scroll>
       <a href="#projects">
         <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
