--- a/forms/form.html
+++ b/forms/form.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="step">
                     <p>
-                        Contact
+                        work
                     </p>
                     <div class="bullet">
                         <span>2</span>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="step">
                     <p>
-                        work
+                        contact
                     </p>
                     <div class="bullet">
                         <span>3</span>
@@ -121,28 +121,6 @@
                     </div>
                     <div class="page">
                         <div class="title">
-                            <h3>Contact Info</h3>
-                        </div>
-                        <div class="field">
-                            <div class="label">
-                                Email Address*
-                            </div>
-                            <input tabindex="3" type="email" name="email" required
-                                placeholder="eg. youremail@email.com">
-                        </div>
-                        <div class="field">
-                            <div class="label">
-                                Phone Number (optional)
-                            </div>
-                            <input tabindex="4" type="tel" name="Phone Number" min="9" placeholder="phone number">
-                        </div>
-                        <div class="field btns">
-                            <button class="prev-1 prev">Previous</button>
-                            <button class="next-1 next">Next</button>
-                        </div>
-                    </div>
-                    <div class="page">
-                        <div class="title">
                             <h3>Services / Work</h3>
                         </div>
                         <div class="service-info">
@@ -159,10 +137,34 @@
                             </select>
                         </div>
                         <div class="field btns">
+                            <button class="prev-1 prev">Previous</button>
+                            <button class="next-1 next">Next</button>
+                        </div>
+                    </div>
+
+                    <div class="page">
+                        <div class="title">
+                            <h3>Contact Info</h3>
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Email Address*
+                            </div>
+                            <input tabindex="3" type="email" name="email" required
+                                placeholder="eg. youremail@email.com">
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Phone Number
+                            </div>
+                            <input tabindex="4" type="tel" min="9" placeholder="phone number" required>
+                        </div>
+                        <div class="field btns">
                             <button class="prev-2 prev">Previous</button>
                             <button class="next-2 next">Next</button>
                         </div>
                     </div>
+                    
                     <div class="page" id="message-page">
                         <div class="title">
                             <h3>Message</h3>
