--- a/forms/form.html
+++ b/forms/form.html
@@ -94,7 +94,7 @@
                 <form action="https://formsubmit.co/bshakex@gmail.com" method="POST">
                     <div class="page slide-page">
                         <div class="title">
-                            <h3>Basic Info</h3>
+                            <h2>Basic Info</h2>
                         </div>
                         <div class="field">
                             <div class="label">
@@ -121,7 +121,7 @@
                     </div>
                     <div class="page">
                         <div class="title">
-                            <h3>Services / Work</h3>
+                            <h2>Services / Work</h2>
                         </div>
                         <div class="service-info">
                             <p>I'm available for: Front End / Junior Web Development role.</p>
@@ -133,8 +133,8 @@
                                 <option>Front Web Developer</option>
                                 <option>Junior Web Developer</option>
                                 <option>Freelance</option>
-                                <option>Start-Up</option>
-                            </select>
+                                <option>CV Request</option>
+                            </select required>
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
@@ -144,7 +144,7 @@
 
                     <div class="page">
                         <div class="title">
-                            <h3>Contact Info</h3>
+                            <h2>Contact Info</h2>
                         </div>
                         <div class="field">
                             <div class="label">
@@ -167,7 +167,7 @@
                     
                     <div class="page" id="message-page">
                         <div class="title">
-                            <h3>Message</h3>
+                            <h2>Message</h2>
                         </div>
                         <div class="field">
                             <div class="label">
