--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
           <div class="skills-bottom">
 
-            <div id="html5" class="skills-item">
+            <div data-scroll id="html5" class="skills-item">
               <div class="icon">
                 <i class="fab fa-html5" alt="icon"></i>
               </div>
@@ -156,7 +156,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-css3-alt"></i>
               </div>
@@ -169,7 +169,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-js-square"></i>
               </div>
@@ -182,7 +182,7 @@
               <p> </p>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-node-js"></i>
               </div>
@@ -192,7 +192,7 @@
                 <li>express JS</li>
               </ul>
             </div>
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-bootstrap"></i>
               </div>
@@ -202,7 +202,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-sass"></i>
               </div>
@@ -214,7 +214,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-react"></i>
               </div>
@@ -224,7 +224,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                     width="50" height="50"
@@ -237,7 +237,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fas fa-leaf" alt="icon"></i> 
               </div>
@@ -248,7 +248,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div id="git-icon" class="icon">
                 <i class="fab fa-git-alt"></i>
               </div>
@@ -258,7 +258,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div id="github-icon" class="icon">
                 <i class="fab fa-github"></i>
               </div>
@@ -268,7 +268,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                     width="50" height="50"
@@ -281,7 +281,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div id="netlify-icon" class="icon">
                   <img src="icons/netlify_logo_icon_145039.svg" alt="netlify">
               </div>
@@ -292,7 +292,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <i class="fas fa-headset"></i>
               </div>
@@ -304,7 +304,7 @@
               </ul>
             </div>
 
-            <div class="skills-item">
+            <div data-scroll class="skills-item">
               <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                   width="50" height="50"
