skills item data-scroll timing and projects = data-scroll

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       <div class="projects-header">
         <h1 data-text="projects" id="projects-h1" class="section-title">Projects</h1>
       </div>
-      <div class="all-projects"></div>
+      <div data-scroll class="all-projects"></div>
   </section>
   <!--End of Projects Section-->
 
@@ -362,14 +362,9 @@
   <!-- end of padding section -->
 
   <!--About Section-->
-  <section id="about">
+  <section  id="about">
     <div class="about container">
-      <div class="col-left" id="about-img">
-        <div class="about-img">
-          <!-- <img id="me" src="img/me.jpg" alt="img" /> -->
-        </div>
-      </div>
-      <div class="col-right">
+      <div data-scroll class="col-right">
         <div class="about-header">
           <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
@@ -433,7 +428,7 @@
 
         <div data-scroll class="contact-item">
           <div class="icon">
-            <i class="fas fa-map"></i>
+            <i class="fas fa-map-marked-alt"></i>
             <!-- <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" /> -->
           </div>
           <h1>Address</h1>
