page title tags and projects section title style

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
   <!-- End of Hero Section-->
 
 <!-- padding section -->
-<section class="paralax paralax-logo"></section>
+<section title="front end developer: shakex sempe" class="paralax paralax-logo"></section>
 <!-- end of padding section -->
 
   <!--Skills section-->
   <section id="skills">
     <div class="skills container">
       <div class="skills-header">
-        <h1 data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
+        <h1 title="skills" data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
       </div>
       <div data-scroll class="skills-top">
         <p>
@@ -140,12 +140,12 @@
       </div>
       <!--Dropdown-->
       <div data-scroll class="dropdown">
-        <button onclick="dropdown()" title="skills" class="dropbtn">My Skills</button>
+        <button onclick="dropdown()" title="full skillset" class="dropbtn">My Skills</button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
 
-            <div data-scroll id="html5" class="skills-item">
+            <div  data-scroll id="html5" class="skills-item">
               <div class="icon">
                 <i class="fab fa-html5" alt="icon"></i>
               </div>
@@ -332,7 +332,7 @@
   <!-- padding section -->
   <section class="section-pad pad-intro">
     <figure data-scroll>
-      <a href="#projects">
+      <a title="responsive web design" href="#projects">
         <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
       </a>
     </figure>
@@ -345,16 +345,18 @@
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 data-text="projects" id="projects-h1" class="section-title">Projects</h1>
+        <h1 title="repository links" data-text="projects" id="projects-h1" class="section-title">Projects</h1>
       </div>
-      <div data-scroll class="all-projects"></div>
+      <div data-scroll class="all-projects">
+        <!-- /PROJECTS.JS -->
+      </div>
   </section>
   <!--End of Projects Section-->
 
   <!-- padding section -->
   <section class="section-pad pad-me">
     <figure data-scroll>
-      <a href="#about">
+      <a title="me: boitumelo sempe" href="#about">
         <img src="img/me-min.jpg" loading="lazy" alt="screens">
       </a>
     </figure>
@@ -366,7 +368,7 @@
     <div class="about container">
       <div data-scroll class="col-right">
         <div class="about-header">
-          <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
+          <h1 title="about me: boitumelo sempe" data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
         <article class="about-article">
           <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate
@@ -391,7 +393,7 @@
           <p class="about-body">I am currently learning the MERN stack which I aim to build full stack web products.
           </p>
         </article>
-        <button id="readBtn" title="read more">read more</button>
+        <button id="readBtn" title="more about boitumelo">read more</button>
 
         <article id="cv">
           <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' target="_blank" class="fcc-link">
@@ -411,7 +413,7 @@
  <!-- padding section -->
  <section class="section-pad pad-me-blue">
   <figure data-scroll>
-    <a href="#contact">
+    <a title="me: shakex sempe" href="#contact">
       <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
     </a>
   </figure>
@@ -422,11 +424,11 @@
   <section id="contact">
     <div class="contact container">
       <div class="contact-header">
-        <h1 data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
+        <h1 title="contact infomation" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
       </div>
       <div class="contact-items">
 
-        <div data-scroll class="contact-item">
+        <div title="location" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-map-marked-alt"></i>
             <!-- <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" /> -->
@@ -438,7 +440,7 @@
           </div>
         </div>
 
-        <div data-scroll class="contact-item">
+        <div title="email" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-envelope"></i>
           </div>
@@ -449,7 +451,7 @@
           </div>
         </div>
 
-        <div data-scroll class="contact-item">
+        <div title="phone details" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
           </div>
@@ -468,7 +470,7 @@
   <!--End of Contact Section-->
 
  <!-- padding section -->
- <section class="paralax paralax-logo"></section>
+ <section title="front end developer: shakex sempe" class="paralax paralax-logo"></section>
  <!-- end of padding section -->
 
   <!--Footer-->
@@ -477,7 +479,7 @@
       
       <!-- social media links -->
       <section data-scroll class="socialMedia-links">
-        <h1 class="footer-section-title">my links</h1>
+        <h1 title="social media links" class="footer-section-title">my links</h1>
         <section class="links-grid">
       <!-- social media link -->
       <div class="socialMedia-item codepen">
@@ -535,7 +537,7 @@
       </section>
       <!-- end of social media links -->
 <!-- contact form -->
-<form data-scroll class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
+<form  data-scroll class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
   <h1 class="footer-section-title contact">Get In Touch</h1>
 
   <div class="input-div">
