test: no parallax sections

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <button href="#skills" type="button" title="Shakex-about"  id="cta-header" class="scroll-link">
+        <button href="#hero-logo" type="button" title="Shakex Sempe: Web Developer"  id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -122,7 +122,16 @@
   <!-- End of Hero Section-->
 
 <!-- padding section -->
-<section title="front end developer: shakex sempe" class="paralax paralax-logo"></section>
+<section id="hero-logo" class="section-pad pad-logo">
+  <figure data-scroll>
+    <a title="shakex sempe: web developer" href="#skills">
+      <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
+    </a>
+  </figure>
+</section>
+<!-- end of padding section -->
+<!-- padding section -->
+<!-- <section title="front end developer: shakex sempe" class="paralax paralax-logo"></section> -->
 <!-- end of padding section -->
 
   <!--Skills section-->
@@ -470,8 +479,14 @@
   <!--End of Contact Section-->
 
  <!-- padding section -->
- <section title="front end developer: shakex sempe" class="paralax paralax-logo"></section>
- <!-- end of padding section -->
+<section id="footer-logo" class="section-pad pad-logo">
+  <figure data-scroll>
+    <a title="shakex sempe: web developer" href="#footer">
+      <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
+    </a>
+  </figure>
+</section>
+<!-- end of padding section -->
 
   <!--Footer-->
   <footer id="footer">
@@ -537,7 +552,7 @@
       </section>
       <!-- end of social media links -->
 <!-- contact form -->
-<form  data-scroll class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
+<form   class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
   <h1 class="footer-section-title contact">Get In Touch</h1>
 
   <div class="input-div">
