--- a/forms/form.html
+++ b/forms/form.html
@@ -18,30 +18,11 @@
 <body>
     <!--Header-->
     <header id="header" class="form-header">
-        <div class="header container">
-            <nav id="navbar" class="form-nav">
-                <div class="brand">
-                    <a href="#footer" class="scroll-link">
-                        <h1><span>S</span>hakex <span>S</span>empe</h1>
-                    </a>
-                </div>
-                <div class="nav-list">
-                    <div class="hamburger" id="form-toggle">
-                        <div class="bar"></div>
-                    </div>
-                    <div class="links-container">
-
-                        <ul class="links">
-                            <li>
-                                <a href="../index.html" data-after="home" class="scroll-li"><i
-                                        class="fas fa-user-friends"></i>home</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+        <div class="home-button">
+            <a href="../index.html">
+                <i class="fas fa-home"></i>
+            </a>
         </div>
-
     </header>
     <!--End of Header-->
 
