footer data-scroll items

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </a>
             </div>
             <ul class="links">
-              <li >
+              <li class="active">
                 <i class="fas fa-lightbulb"></i>
                 <a href="#skills" title="skills" data-after="skills"class="scroll-link scroll-li">skills</a>
               </li>
@@ -94,7 +94,7 @@
   <!--End of Header-->
 
   <!--Hero Section-->
-  <section id="home" class="welcome-section">
+  <section id="home" class="section welcome-section">
     <div class="hero container">
       <div id="hero-h1">
         <h1>
@@ -130,12 +130,9 @@
   </figure>
 </section>
 <!-- end of padding section -->
-<!-- padding section -->
-<!-- <section title="front end developer: shakex sempe" class="paralax paralax-logo"></section> -->
-<!-- end of padding section -->
 
   <!--Skills section-->
-  <section id="skills">
+  <section class="link-section" id="skills">
     <div class="skills container">
       <div class="skills-header">
         <h1 title="skills" data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
@@ -348,10 +345,8 @@
   </section>
   <!-- end of padding section -->
 
-
-  
   <!--Projects Section-->
-  <section id="projects">
+  <section class="link-section" id="projects">
     <div class="projects container">
       <div class="projects-header">
         <h1 title="repository links" data-text="projects" id="projects-h1" class="section-title">Projects</h1>
@@ -373,7 +368,7 @@
   <!-- end of padding section -->
 
   <!--About Section-->
-  <section  id="about">
+  <section class="link-section" id="about">
     <div class="about container">
       <div data-scroll class="col-right">
         <div class="about-header">
@@ -419,18 +414,18 @@
   </section>
   <!--End of About Section-->
 
- <!-- padding section -->
- <section class="section-pad pad-me-blue">
-  <figure data-scroll>
-    <a title="me: shakex sempe" href="#contact">
-      <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
-    </a>
-  </figure>
-</section>
-<!-- end of padding section -->
+  <!-- padding section -->
+  <section class="section-pad pad-me-blue">
+    <figure data-scroll>
+      <a title="me: shakex sempe" href="#contact">
+        <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
+      </a>
+    </figure>
+  </section>
+  <!-- end of padding section -->
 
   <!--Contact Section-->
-  <section id="contact">
+  <section class="link-section" id="contact">
     <div class="contact container">
       <div class="contact-header">
         <h1 title="contact infomation" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
@@ -478,23 +473,23 @@
   </section>
   <!--End of Contact Section-->
 
- <!-- padding section -->
-<section id="footer-logo" class="section-pad pad-logo">
-  <figure data-scroll>
-    <a title="shakex sempe: web developer" href="#footer">
-      <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
-    </a>
-  </figure>
-</section>
-<!-- end of padding section -->
+  <!-- padding section -->
+  <section id="footer-logo" class="section-pad pad-logo">
+    <figure data-scroll>
+      <a title="shakex sempe: web developer" href="#footer">
+        <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
+      </a>
+    </figure>
+  </section>
+  <!-- end of padding section -->
 
   <!--Footer-->
-  <footer id="footer">
+  <footer class="link-section" id="footer">
     <div class="footer container">
       
       <!-- social media links -->
-      <section data-scroll class="socialMedia-links">
-        <h1 title="social media links" class="footer-section-title">my links</h1>
+      <section class="socialMedia-links">
+        <h1 data-scroll title="social media links" class="footer-section-title">my links</h1>
         <section class="links-grid">
       <!-- social media link -->
       <div class="socialMedia-item codepen">
@@ -553,7 +548,7 @@
       <!-- end of social media links -->
 <!-- contact form -->
 <form   class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-  <h1 class="footer-section-title contact">Get In Touch</h1>
+  <h1 data-scroll class="footer-section-title contact">Get In Touch</h1>
 
   <div class="input-div">
     <label for="name">name :</label>
