markup and style

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
               <ul>
                 <li>Applied Visual Design</li>
                 <li>Semantic Markup</li>
+                <li>Search engine optimization</li>
               </ul>
             </div>
 
