desktop header  media query

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
               <li>
                 <i class="fas fa-at"></i>
-                <a href="forms/form.html" title="contact-form" target="_blank" data-after="form" class="scroll-li">get In touch</a>
+                <a href="forms/form.html" title="contact-form" target="_blank" data-after="form" class="scroll-li">form</a>
               </li>
 
             </ul>
