git progress img

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div data-scroll class="skills-top">
         <p>
           I'm a Front End Developer focused on Responsive Web Design and UX Design.<br>
-          I code immersive Landing Pages and Portfolio Webpages for small businesses and individuals.
+          I code immersive webpages using HTML5 semantic markup and advanced CSS3.
           <br><br><span>View my full skill set in the dropdown section below.</span>
         </p>
       </div>
@@ -327,6 +327,13 @@
           </div>
         </div>
       </div>
+      <!-- git progress img -->
+      <figure data-scroll class="git-img">
+        <a href="#projects-pad">
+        <img src="/img/git.bmp" alt="github progress">
+      </a>
+      </figure>
+      <!-- end of git progress img -->
       <!-- <figure data-scroll>
         <a href="#projects">
           <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
@@ -337,7 +344,7 @@
   <!--End of Skills section-->
 
   <!-- padding section -->
-  <section class="section-pad pad-intro">
+  <section id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
       <a title="responsive web design" href="#projects">
         <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
