--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       <!-- git progress img -->
       <figure data-scroll class="git-img">
         <a href="#projects-pad">
-        <img src="/img/git.bmp" alt="github progress">
+        <img src="img/git-min.png" alt="github progress">
       </a>
       </figure>
       <!-- end of git progress img -->
