git and responsive design imgs

--- a/index.html
+++ b/index.html
@@ -327,13 +327,11 @@
           </div>
         </div>
       </div>
-      <!-- git progress img -->
+      <!-- skills img -->
       <figure data-scroll class="git-img">
-        <a href="#projects-pad">
-        <img src="img/git-min.png" alt="github progress">
-      </a>
+        <img src="img/syntex-1.jpg" alt="github progress">
       </figure>
-      <!-- end of git progress img -->
+      <!-- end of skills img -->
       <!-- <figure data-scroll>
         <a href="#projects">
           <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
@@ -346,8 +344,8 @@
   <!-- padding section -->
   <section id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
-      <a title="responsive web design" href="#projects">
-        <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
+      <a title="github contribution activity" href="#projects">
+        <img src="img/git-min.png" loading="lazy" alt="screens">
       </a>
     </figure>
   </section>
@@ -395,8 +393,8 @@
             where I completed a certificate in Responsive Web Design.
           </p>
 
-          <p class="about-body" id="about-body">I enjoy making responsive web pages which look good on devices ranging
-            from small mobile screens to large desktop screens.
+          <p class="about-body" id="about-body">I code responsive web pages suitable for devices ranging
+            from small mobile screens to large desktop screens. My preferred tool for building and maintaining stylesheets is Sass while I 
             I use HTML Semantic Markup and On-Page Search Engine Optimization techniques to grow website views,
             essential for online presence and web traffic to the site by potential customers and clients.
           </p>
