--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
             <ul class="links">
               <li class="active">
                 <i class="fas fa-lightbulb"></i>
-                <a href="#skills" title="skills" data-after="skills"class="scroll-link scroll-li">skills</a>
+                <a href="#skills" title="web development skills" data-after="skills"class="scroll-link scroll-li">skills</a>
               </li>
               
               <li>
                 <i class="fab fa-github active"></i>
-                <a href="#projects" title="projects" data-after="Projects" class="scroll-link scroll-li">projects</a>
+                <a href="#projects" title="github repositories" data-after="Projects" class="scroll-link scroll-li">projects</a>
               </li>
 
               <li>
                 <i class="fas fa-user-circle"></i>
-                <a href="#about" title="about" data-after="About" class="scroll-link scroll-li">about</a>
+                <a href="#about" title="about Boitumelo Sempe" data-after="About" class="scroll-link scroll-li">about</a>
                 </li>
 
               <li>
@@ -124,7 +124,7 @@
 <!-- padding section -->
 <section id="hero-logo" class="section-pad pad-logo">
   <figure data-scroll>
-    <a title="shakex sempe: web developer" href="#skills">
+    <a title="Shakex Sempe: front end web developer" href="#skills">
       <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
     </a>
   </figure>
@@ -328,7 +328,7 @@
         </div>
       </div>
       <!-- skills img -->
-      <figure data-scroll class="git-img">
+      <figure title="Responsive Web Design" data-scroll class="git-img">
         <img src="img/syntex-1.jpg" alt="github progress">
       </figure>
       <!-- end of skills img -->
